--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "superagent-logger",
   "version": "1.0.1",
-  "description": "A superagent middleware for adding NPM-style logging. Useful for debugging HTTP-clients.",
+  "description": "superagent middleware for adding NPM-style logging. Useful for debugging HTTP-clients.",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
